--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta name="robots" content="all">
         <meta name="description" content="えいーばのホームページです。サービスが終了したゲームを再現しようとしたり、推しのゲーム紹介したりします。たまに真面目な投稿もします。">
-        <meta property="og:url" content="ここにURLを入力する">
+        <meta property="og:url" content="https://sangria1124.github.io/">
         <meta property="og:title" content="ei-baのホームページ">
         <meta property="og:description" content="えいーばのホームページです。サービスが終了したゲームを再現しようとしたり、推しのゲーム紹介したりします。たまに真面目な投稿もします。">
-        <meta property="og:image" content="画像">
+        <meta property="og:image" content="eiiba_image.png">
         <meta property="og:locale" content="ja_JP">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="ei-baのホームページ">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@Tatami139850">
         <title>ei-baのホームページ</title>
-        <link rel="canonical" href="正規化URL">
+        <link rel="canonical" href="https://sangria1124.github.io/">
         <link rel="icon" href="eiiba.ico">
         <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
     </head>
