--- a/index.html
+++ b/index.html
@@ -27,9 +27,22 @@
                     <li><a href="works.html">制作物一覧</li>
                     <li><a href="activities.html">活動一覧</a></li>
                     <li>工事中</li>
-                </ul>
+                </ul>    
             </nav> 
         </header>
         <p>このページは<em>制作中</em>のものとなります。ご了承ください</p>
+        <section>
+            <h3>主な制作物:</h3>
+                <ol>
+                    <li><a href="inishie.html">「イニシエダンジョン」を再現する</a></li>
+                </ol>
+        </section>
+        <section>
+            <h3>主な活動:</h3>
+        </section>
+
+        <footer>
+            <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </footer>
     </body>
 </html>
