--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="twitter:site" content="@Tatami139850">
         <title>ei-baのホームページ</title>
         <link rel="canonical" href="https://sangria1124.github.io/">
-        <link rel="shortcut icon" type="image/x-icon" href="path/to/eiiba.ico">
+        <link rel="icon" href="/favicon.ico">
         <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
     </head>
     <body>
