--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <meta name="twitter:site" content="@Tatami139850">
         <title>ei-baのホームページ</title>
         <link rel="canonical" href="https://sangria1124.github.io/">
-        <link rel="icon" href="eiiba.ico">
-        <link rel="apple-touch-icon" sizes="180×180" href="eiiba_image.png">
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
     </head>
     <body>
         <header>
@@ -35,7 +34,7 @@
         <section>
             <h3>主な制作物:</h3>
                 <ol>
-                    <li><a href="inishie.html">イニシエダンジョン再現ver</a></li>
+                    <li><a href="inishie.html">「イニシエダンジョン」を再現する</a></li>
                 </ol>
         </section>
         <section>
