--- a/index.html
+++ b/index.html
@@ -23,25 +23,43 @@
             <h1><a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async"></image><em>えいーばのホームページ</em></a></h1>
             <nav>
                 <ul>
-                    <li><a href="introduction.html">自己紹介</a></li>
+                    <li><a href="introduction.html">自己紹介</a></li> 
                     <li><a href="works.html">制作物一覧</li>
                     <li><a href="activities.html">活動一覧</a></li>
                     <li>工事中</li>
                 </ul>    
             </nav> 
         </header>
-        <p>このページは<em>制作中</em>のものとなります。ご了承ください</p>
-        <section>
-            <h3>主な制作物:</h3>
-                <ol>
-                    <li><a href="inishie.html">「イニシエダンジョン」を再現する</a></li>
-                </ol>
-        </section>
-        <section>
-            <h3>主な活動:</h3>
-        </section>
 
+        <p>このページは<em>制作中</em>のものとなります。ご了承ください</p>
+        <main>
+            <section>
+                <h3>主な制作物:</h3>
+                    <ol>
+                        <li><a href="inishie.html">「イニシエダンジョン」を再現する</a></li>
+                    </ol>
+            </section>
+            <section>
+                <h3>主な活動:</h3>
+                <ol>
+                    <li><a href="">親子プログラミング教室</a></li>
+                </ol>
+            </section>
+        </main>
+        
         <footer>
+            <address>
+                <p>
+                    <a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async">Topに戻る</image></a>
+                </p>
+            </address>
+            <aside>
+                <p>所属サークル(リンクをクリックでHPに飛べます):</p>
+                <ul>
+                    <li><a href="https://uucactus.com/">宇都宮大学情報研究会CACTUS</a></li>
+                    <li><a>宇都宮大学U-project</a></li>
+                </ul>    
+            </aside>
             <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </footer>
     </body>
