--- a/inishie.html
+++ b/inishie.html
@@ -13,13 +13,13 @@
         <meta property="og:site_name" content="ei-baのホームページ">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@Tatami139850">
-        <title>「イニシエダンジョン」を再現する</title>
+        <title>イニシエダンジョンを再現したい</title>
         <link rel="canonical" href="https://sangria1124.github.io/">
         <link rel="icon" href="eiiba.ico">
         <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
     </head>
     <body>
-                <header>
+        <header>
             <h1><a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async"></image><em>えいーばのホームページ</em></a></h1>
             <nav>
                 <ul>
@@ -30,5 +30,22 @@
                 </ul>    
             </nav> 
         </header>
+
+        <footer>
+            <address>
+                <p>
+                    <a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async">Topに戻る</image></a>
+                </p>
+            </address>
+            <aside>
+                <p>所属サークル(リンクをクリックでHPに飛べます):</p>
+                <ul>
+                    <li><a href="https://uucactus.com/">宇都宮大学情報研究会CACTUS</a></li>
+                    <li><a>宇都宮大学U-project</a></li>
+                </ul>    
+            </aside>
+            <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </footer>
+
     </body>
 </html>
