--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link rel="canonical" href="https://sangria1124.github.io/">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
     </head>
     <body>
         <header>
