--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
     </head>
     <body>
+        
         <header>
-            <h1><a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async"></image><em>えいーばのホームページ</em></a></h1>
+            <h1>
+                <a href="index.html" class="image-link"><div class="image-container"></div><em>えいーばのホームページ</em>
+                </a>
+            </h1>
             <nav>
                 <ul>
                     <li><a href="introduction.html">自己紹介</a></li> 
@@ -52,7 +55,7 @@
         <footer>
             <address>
                 <p>
-                    <a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async">Topに戻る</image></a>
+                    <a href="index.html" class="image-link"><div class="image-container"></div>Topに戻る</a>
                 </p>
             </address>
             <aside>
