--- a/introduction.html
+++ b/introduction.html
@@ -22,7 +22,9 @@
     </head>
     <body>
         <header>
-            <h1><a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async"></image><em>えいーばのホームページ</em></a></h1>
+            <h1>
+                <a href="index.html" class="image-link"><div class="image-container"></div><em>えいーばのホームページ</em></a>
+            </h1>
             <nav>
                 <ul>
                     <li><a href="introduction.html">自己紹介</a></li>
@@ -36,7 +38,7 @@
         <footer>
             <address>
                 <p>
-                    <a href="index.html"><image src="eiiba_image.png" alt="えいーばのホームページ" decoding="async">Topに戻る</image></a>
+                    <a href="index.html" class="image-link"><div class="image-container"></div>Topに戻る</a>
                 </p>
             </address>
             <aside>
