--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         
         <header>
             <h1>
-                <a href="index.html" class="image-link"><div class="image-container"></div><em>えいーばのホームページ</em>
+                <a href="index.html" class="image-link"><div class="image-container"></div>
                 </a>
+                <div class="Top-text"><a href="index.html" class="Top-text">えいーばのホームページ</a></div>
             </h1>
             <nav>
                 <ul>
@@ -36,7 +37,7 @@
             </nav> 
         </header>
 
-        <p>このページは<em>制作中</em>のものとなります。ご了承ください</p>
+        <p>このページは<em>工事中です</em></p>
         <main>
             <section>
                 <h3>主な制作物:</h3>
@@ -47,25 +48,33 @@
             <section>
                 <h3>主な活動:</h3>
                 <ol>
-                    <li><a href="">親子プログラミング教室</a></li>
+                    <li><a href="oyako.html">親子プログラミング教室</a></li>
                 </ol>
             </section>
         </main>
         
         <footer>
             <address>
-                <p>
-                    <a href="index.html" class="image-link"><div class="image-container"></div>Topに戻る</a>
-                </p>
+                <h2>
+                    <a href="index.html"><image src="eiiba_image.png" alt="Top"></image>Topに戻る</a>
+                </h2>
             </address>
             <aside>
                 <p>所属サークル(リンクをクリックでHPに飛べます):</p>
                 <ul>
                     <li><a href="https://uucactus.com/">宇都宮大学情報研究会CACTUS</a></li>
                     <li><a>宇都宮大学U-project</a></li>
-                </ul>    
+                </ul>
+                <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+                <p>
+                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <img style="border:0;width:88px;height:31px"
+                            src="http://jigsaw.w3.org/css-validator/images/vcss"
+                            alt="正当なCSSです!" />
+                    </a>
+                </p>    
             </aside>
-            <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </footer>
     </body>
 </html>
