--- a/introduction.html
+++ b/introduction.html
@@ -23,7 +23,9 @@
     <body>
         <header>
             <h1>
-                <a href="index.html" class="image-link"><div class="image-container"></div><em>えいーばのホームページ</em></a>
+                <a href="index.html" class="image-link"><div class="image-container"></div>
+                </a>
+                <div class="Top-text"><a href="index.html" class="Top-text">えいーばのホームページ</a></div>
             </h1>
             <nav>
                 <ul>
@@ -34,12 +36,14 @@
                 </ul>    
             </nav> 
         </header>
-
+        <main>
+            
+        </main>
         <footer>
             <address>
-                <p>
-                    <a href="index.html" class="image-link"><div class="image-container"></div>Topに戻る</a>
-                </p>
+                <h2>
+                    <a href="index.html"><image src="eiiba_image.png" alt="Top"></image>Topに戻る</a>
+                </h2>
             </address>
             <aside>
                 <p>所属サークル(リンクをクリックでHPに飛べます):</p>
@@ -49,6 +53,14 @@
                 </ul>    
             </aside>
             <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                        src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="正当なCSSです!" />
+                </a>
+            </p>    
+
         </footer>
 
     </body>
