--- a/oyako.html
+++ b/oyako.html
@@ -36,6 +36,16 @@
                 </ul>    
             </nav> 
         </header>
+        <main>
+            <h3>親子プログラミング教室</h3>
+            <article>
+                <header>
+                    <h4>2024年春会準備</h4>
+                    <p>公開日:2024年3月9日</p>
+                </header>
+                <p>どうも皆さん。<br>寒さの中にも、春の気配を感じることとなりました。さて、早速ですが、春の親子プログラミング教室の準備をしていますので、その報告をさせて頂きます。今回の企画は、「焼肉屋にいる"例のアイツ"」を子供が自ら作り、そいつに料理を運ばせようというコンセプトとなっています。そして今現在、今回の体験で使う「maqueen」というロボットの外装と、そいつを動かすプログラムを破竹の勢いで制作中という状況です。可能なら「ロボットが歩く道」を自由に決めれるようにしたいな...とは考えています。<br>以上です。読んでいただきありがとうございます。</p>
+            </article>
+        </main>
 
         <footer>
             <address>
@@ -48,7 +58,7 @@
                 <ul>
                     <li><a href="https://uucactus.com/">宇都宮大学情報研究会CACTUS</a></li>
                     <li><a>宇都宮大学U-project</a></li>
-                </ul>    
+                </ul>
             </aside>
             <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <p>
