--- a/oyako.html
+++ b/oyako.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
@@ -42,9 +42,9 @@
                 <dt>Q.親子プログラミング教室とは?</dt>
                 <dd>A.主に小中学生の子供たちを対象としたイベントで、彼らがプログラミングを通して楽しむと同時に何かを学んでもらうという目的のものになっています。</dd>
                 <dt>Q.参加方法は?</dt>
-                <dd>A.「カマガワクリエイション」という団体と関係があるイベントとなっているため、基本的に募集中の時は<a href="">こちら</a>のXアカウントでポストされることが多いです。(ただし、アカウントの運営者様は私ではありません。ご了承ください。)</dd>
+                <dd>A.「カマガワクリエイティブスクール」という団体と関係があるイベントとなっているため、基本的に募集中の時は<a href="https://twitter.com/kama9rischool">こちら</a>のXアカウントでポストされることが多いです。ただし、アカウントの運営者様は私ではありません。ご了承ください。</dd>
                 <dt>Q.今までやってきた活動を知りたいのですが</dt>
-                <dd>A.<a href="">本イベントの取りまとめの方のFaceBookアカウント</a>で紹介されています。これに関しましても私のアカウントではないため、ご了承ください。</dd>
+                <dd>A.<a href="https://www.facebook.com/sentaro.aihara">本イベントの取りまとめの方のFaceBookアカウント</a>で紹介されています。これに関しましても私のアカウントではないため、ご了承ください。</dd>
             </dl>
             
             <article>
@@ -60,7 +60,7 @@
                     <p>公開日:2024年3月13日(水)</p>
                 </header>
                 <p>皆さんこんにちは。<br>今日は親子プログラミング教室(春会)の直前準備を行いましたので、その報告をさせて頂きます。今回は直前準備ということで、本番で使うコースの作成、並びに本番で使う機体とそのプログラムの調整を行いました。私が担当した箇所はコース作成のベースの部分で、添付画像のようなライントレースを単純に行うことができるようなものをサラッと作りました。本番では、お客さん(紙)の前のラインに色を付けて、その色にmaqueenが到達したら特定の動きをするようにしたり、機体に搭載されている超音波センサを使用して、障害物が前にあったらその障害物に対応するという動作を行う流れになりそうです。
-                <img src="oyako_1.jpg" sizes="20vw" alt="oyako">
+                <figure><img src="oyako_1.jpg" alt="oyako_pre" width="30%" height="30%"></figure>
                 </p>
             </article>
         </main>
