--- a/oyako.html
+++ b/oyako.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
@@ -60,8 +60,20 @@
                     <p>公開日:2024年3月13日(水)</p>
                 </header>
                 <p>皆さんこんにちは。<br>今日は親子プログラミング教室(春会)の直前準備を行いましたので、その報告をさせて頂きます。今回は直前準備ということで、本番で使うコースの作成、並びに本番で使う機体とそのプログラムの調整を行いました。私が担当した箇所はコース作成のベースの部分で、添付画像のようなライントレースを単純に行うことができるようなものをサラッと作りました。本番では、お客さん(紙)の前のラインに色を付けて、その色にmaqueenが到達したら特定の動きをするようにしたり、機体に搭載されている超音波センサを使用して、障害物が前にあったらその障害物に対応するという動作を行う流れになりそうです。
-                <figure><img src="oyako_1.jpg" alt="oyako_pre" width="30%" height="30%"></figure>
+                <figure><img src="oyako_1.jpg" alt="準備の画像" width="30%" height="30%"></figure>
                 </p>
+            </article>
+            <article>
+                <header>
+                    <h4>2024年親子プログラミング教室春会本番 in ビルトザリガニ</h4>
+                    <p>公開日:2024年3月31日(日)</p>
+                </header>
+                <p>本日(3\31)をもって、親子プログラミング教室春会、計2回の本番が終わりましたので、ご報告させていただきます。<br>まず、両日程とも会の結果としては成功という形で終わることができました。具体的な今回行った内容としては、1回目がmaqueenによるライントレース、2回目では、1回目の内容と併せて、高学年の子供たちにカラーセンサを使ってのmaqueenの停止まで行ってもらいました。2回とも、題材が動くロボットということが幸いしたのか、子供たちは大変楽しんでワークショップをやっていたようでした。単純な感想になりますが、子供たちがここまで積極的に参加してくれると、とても嬉しいです。一方で、自己紹介などを通して、自分自身の発言能力の低さを再認識しました。どうも私は注目されるとなぜか声が出なくなってしまうようです...。これを改善できるように、これからは何かを発表する機会を逃さないようにしようと思います。<br>色々思うところはありますが、今回のワークショップは間違いなく自分を高める良い機会になったと思います。以上です、ここまで読んでいただきありがとうございます。(以下の画像は今回のワークショップの画像です)</p>
+                <figure>
+                    <img src="oyako_2.jpg" alt="会の画像" width="30%" height="30%">
+                    <img src="oyako_3.jpg" alt="会の画像" width="30%" height="30%">
+
+                </figure>
             </article>
         </main>
 
