--- a/inishie.html
+++ b/inishie.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="eiiba.ico">
     <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" href="TemplateData/style.css">
 </head>
 <body>
     <header>
@@ -38,27 +39,89 @@
 
     <!-- WebGL表示用のmainセクション -->
     <main>
-        <div id="unityContainer" style="width: 100%; height: 100vh; background: #000;"></div>
+        <div id="unity-container" class="unity-desktop">
+            <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+            <div id="unity-loading-bar">
+                <div id="unity-logo"></div>
+                <div id="unity-progress-bar-empty">
+                    <div id="unity-progress-bar-full"></div>
+                </div>
+            </div>
+            <div id="unity-warning"> </div>
+            <div id="unity-footer">
+                <div id="unity-webgl-logo"></div>
+                <div id="unity-fullscreen-button"></div>
+                <div id="unity-build-title">inishie_beta</div>
+            </div>
+        </div>
         <script>
-            // Unity WebGLファイルのパスを指定
-            var buildUrl = "Build"; // ビルドフォルダのパス
-            var loaderUrl = buildUrl + "/WebGL.loader.js"; // .loader.js ファイルのパス
+            var container = document.querySelector("#unity-container");
+            var canvas = document.querySelector("#unity-canvas");
+            var loadingBar = document.querySelector("#unity-loading-bar");
+            var progressBarFull = document.querySelector("#unity-progress-bar-full");
+            var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+            var warningBanner = document.querySelector("#unity-warning");
+
+            function unityShowBanner(msg, type) {
+                function updateBannerVisibility() {
+                    warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+                }
+                var div = document.createElement('div');
+                div.innerHTML = msg;
+                warningBanner.appendChild(div);
+                if (type == 'error') div.style = 'background: red; padding: 10px;';
+                else {
+                    if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+                    setTimeout(function() {
+                        warningBanner.removeChild(div);
+                        updateBannerVisibility();
+                    }, 5000);
+                }
+                updateBannerVisibility();
+            }
+
+            var buildUrl = "Build";
+            var loaderUrl = buildUrl + "/WebGL.loader.js";
             var config = {
-                dataUrl: buildUrl + "/WebGL.data", // .data ファイルのパス
-                frameworkUrl: buildUrl + "/WebGL.framework.js", // .framework.js ファイルのパス
-                codeUrl: buildUrl + "/WebGL.wasm", // .wasm ファイルのパス
-                streamingAssetsUrl: "StreamingAssets", // ストリーミングアセットのパス（存在する場合）
+                dataUrl: buildUrl + "/WebGL.data",
+                frameworkUrl: buildUrl + "/WebGL.framework.js",
+                codeUrl: buildUrl + "/WebGL.wasm",
+                streamingAssetsUrl: "StreamingAssets",
                 companyName: "Eiiba",
                 productName: "inishie_beta",
                 productVersion: "1.0",
+                showBanner: unityShowBanner,
             };
-            
-            // UnityLoader.jsのスクリプトタグを追加してロード
+
+            if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+                var meta = document.createElement('meta');
+                meta.name = 'viewport';
+                meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+                document.getElementsByTagName('head')[0].appendChild(meta);
+                container.className = "unity-mobile";
+                canvas.className = "unity-mobile";
+            } else {
+                canvas.style.width = "960px";
+                canvas.style.height = "600px";
+            }
+
+            loadingBar.style.display = "block";
+
             var script = document.createElement("script");
             script.src = loaderUrl;
-            script.onload = function () {
-                createUnityInstance(document.querySelector("#unityContainer"), config);
+            script.onload = () => {
+                createUnityInstance(canvas, config, (progress) => {
+                    progressBarFull.style.width = 100 * progress + "%";
+                }).then((unityInstance) => {
+                    loadingBar.style.display = "none";
+                    fullscreenButton.onclick = () => {
+                        unityInstance.SetFullscreen(1);
+                    };
+                }).catch((message) => {
+                    alert(message);
+                });
             };
+
             document.body.appendChild(script);
         </script>
     </main>
