--- a/inishie.html
+++ b/inishie.html
@@ -37,10 +37,10 @@
 
         /* WebGLコンテナのスタイル調整 */
         #unity-container {
-            width: 100%;
-            max-width: 100%;
-            height: calc(100vh - 200px); /* 高さの計算 */
-            max-height: calc(100vh - 200px); /* 高さの最大値 */
+            width: 10%;
+   
+            height: 10%; /* 高さの計算 */
+
             margin: 0 auto; /* 中央揃え */
             display: block;
         }
