--- a/inishie.html
+++ b/inishie.html
@@ -1,90 +1,65 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="robots" content="all">
-    <meta name="description" content="えいーばのホームページです。サービスが終了したゲームを再現しようとしたり、推しのゲーム紹介したりします。たまに真面目な投稿もします。">
-    <meta property="og:url" content="https://sangria1124.github.io/">
-    <meta property="og:title" content="ei-baのホームページ">
-    <meta property="og:description" content="えいーばのホームページです。サービスが終了したゲームを再現しようとしたり、推しのゲーム紹介したりします。たまに真面目な投稿もします。">
-    <meta property="og:image" content="eiiba_image.png">
-    <meta property="og:locale" content="ja_JP">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="ei-baのホームページ">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Tatami139850">
-    <title>イニシエダンジョンを再現したい</title>
-    <link rel="canonical" href="https://sangria1124.github.io/">
-    <link rel="icon" href="eiiba.ico">
-    <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-    <header>
-        <h1>
-            <a href="index.html" class="image-link"><div class="image-container"></div>
-            </a>
-            <div class="Top-text"><a href="index.html" class="Top-text">えいーばのホームページ</a></div>
-        </h1>
-        <nav>
-            <ul>
-                <li><a href="introduction.html">自己紹介</a></li>
-                <li><a href="works.html">制作物一覧</li>
-                <li><a href="activities.html">活動一覧</a></li>
-                <li>工事中</li>
-            </ul>    
-        </nav> 
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="robots" content="all">
+        <meta name="description" content="えいーばのホームページです。サービスが終了したゲームを再現しようとしたり、推しのゲーム紹介したりします。たまに真面目な投稿もします。">
+        <meta property="og:url" content="https://sangria1124.github.io/">
+        <meta property="og:title" content="ei-baのホームページ">
+        <meta property="og:description" content="えいーばのホームページです。サービスが終了したゲームを再現しようとしたり、推しのゲーム紹介したりします。たまに真面目な投稿もします。">
+        <meta property="og:image" content="eiiba_image.png">
+        <meta property="og:locale" content="ja_JP">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="ei-baのホームページ">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@Tatami139850">
+        <title>イニシエダンジョンを再現したい</title>
+        <link rel="canonical" href="https://sangria1124.github.io/">
+        <link rel="icon" href="eiiba.ico">
+        <link rel="apple-touch-icon" sizes="180*180" href="eiiba_image.png">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
-    <!-- WebGL表示用のmainセクション -->
-    <main>
-        <div id="unityContainer" style="width: 100%; height: 100vh; background: #000;"></div>
-        <script>
-            // Unity WebGLファイルのパスを指定
-            var buildUrl = "Build"; // ビルドフォルダのパス
-            var loaderUrl = buildUrl + "/WebGL.loader.js"; // .loader.js ファイルのパス
-            var config = {
-                dataUrl: buildUrl + "/WebGL.data", // .data ファイルのパス
-                frameworkUrl: buildUrl + "/WebGL.framework.js", // .framework.js ファイルのパス
-                codeUrl: buildUrl + "/WebGL.wasm", // .wasm ファイルのパス
-                streamingAssetsUrl: "StreamingAssets", // ストリーミングアセットのパス（存在する場合）
-                companyName: "Eiiba",
-                productName: "inishie_beta",
-                productVersion: "1.0",
-            };
-            
-            // UnityLoader.jsのスクリプトタグを追加してロード
-            var script = document.createElement("script");
-            script.src = loaderUrl;
-            script.onload = function () {
-                createUnityInstance(document.querySelector("#unityContainer"), config);
-            };
-            document.body.appendChild(script);
-        </script>
-    </main>
+    </head>
+    <body>
+        <header>
+            <h1>
+                <a href="index.html" class="image-link"><div class="image-container"></div>
+                </a>
+                <div class="Top-text"><a href="index.html" class="Top-text">えいーばのホームページ</a></div>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="introduction.html">自己紹介</a></li>
+                    <li><a href="works.html">制作物一覧</li>
+                    <li><a href="activities.html">活動一覧</a></li>
+                    <li>工事中</li>
+                </ul>    
+            </nav> 
+        </header>
 
-    <footer>
-        <address>
-            <h2>
-                <a href="index.html"><img src="eiiba_image.png" alt="Top">Topに戻る</a>
-            </h2>
-        </address>
-        <aside>
-            <p>所属サークル(リンクをクリックでHPに飛べます):</p>
-            <ul>
-                <li><a href="https://uucactus.com/">宇都宮大学情報研究会CACTUS</a></li>
-                <li><a>宇都宮大学U-project</a></li>
-            </ul>    
-        </aside>
-        <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                    src="http://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="正当なCSSです!" />
-            </a>
-        </p>    
-    </footer>
-</body>
+        <footer>
+            <address>
+                <h2>
+                    <a href="index.html"><image src="eiiba_image.png" alt="Top"></image>Topに戻る</a>
+                </h2>
+            </address>
+            <aside>
+                <p>所属サークル(リンクをクリックでHPに飛べます):</p>
+                <ul>
+                    <li><a href="https://uucactus.com/">宇都宮大学情報研究会CACTUS</a></li>
+                    <li><a>宇都宮大学U-project</a></li>
+                </ul>    
+            </aside>
+            <a href="https://twitter.com/Tatami139850?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="ja" data-show-count="false">Follow @Tatami139850</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                        src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="正当なCSSです!" />
+                </a>
+            </p>    
+
+        </footer>
+
+    </body>
 </html>
